@@ -1,3 +1,8 @@
+2009-12-14
+
+	* src/setup.c: changed the icon. Use name 'Mailbox' only when basename
+	  is 'Mail'.
+
 2009-12-11
 
 	* src/setup.c: modified path display.
